user data exposing hardening with policies
